# pipeline_vsdi

./: .buildinfo  .readthedocs.yaml  LICENSE  README.md  enviroment.txt  examples.html  genindex.html  index.html  modules.html  objects.inv  pipeline_vsdi.decoding.html  pipeline_vsdi.embedding.html  pipeline_vsdi.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree  pipeline_vsdi.decoding.doctree  pipeline_vsdi.doctree  pipeline_vsdi.embedding.doctree
.github/workflows/: documentation.yaml
_sources/: index.rst.txt
dim_reduction/: linear_dim_red.py  vsdi_preprocessing.py
docs/: conf.py  dim_reduction.rst  examples.rst  index.rst  modules.rst  pipeline_vsdi.decoding.rst  pipeline_vsdi.dim_reduction.rst  pipeline_vsdi.embedding.rst  pipeline_vsdi.preprocessing.rst  pipeline_vsdi.rst  pipeline_vsdi.visualization.rst  pipeline_vsdi.vsdi.rst  preprocessing.rst  visualization.rst  vsdi.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/components/: dim_reduction.rst  preprocessing.rst  vsdi.rst
docs/deploy/: deployment.rst
docs/source/: conf.py  index.rst  requirements.txt  vsdi.VAE.rst  vsdi.dim_reduction.rst  vsdi.embeddings.rst  vsdi.io.rst  vsdi.linear_dim_red.rst  vsdi.rst  vsdi.session.rst  vsdi.utils.rst  vsdi.visualization.rst
notebooks/: components_matching.ipynb  dashboard.ipynb  glm.ipynb  pca_ica.ipynb  quickstart.ipynb  train_VAE.ipynb  train_autoencoder.ipynb
pipeline_vsdi/: VSDI_Session.py  VsdiSession.py  cleaning.py  devel.ipynb  io.py  utils.py
preprocessing/: utils.py  vsdi_preprocessing.py
vsdi/: VAE.py  clustering.py  io.py  loaders.py  pca_ica.ipynb  pipeline.py  session.py  utils.py  visualization.py  vsdi.py
(+18 files in other folders)
