[tool.poetry]
name = "pipeline-vsdi"
version = "1.0.0"
description = "Software for handling and processing Voltage Sensitive Dye Imaging data and Virtual Reality logfiles"
authors = ["davidespalla <davide.spalla@gmail.com>"]
license = "Apache 2"
readme = "README.md"
packages = [{include = "pipeline_vsdi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyterlab = "^4.0.4"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
torch = "^2.0.1"
tqdm = "^4.65.2"
tifffile = "^2023.7.18"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
